Fixed a wrapping issue with the clock in English. Minor spacing standardization. Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/Clock.less
+++ b/css/Clock.less
@@ -1,9 +1,10 @@
 .moon-clock {
-	display: block;
-	vertical-align: top;
-	width: auto;
-	text-align:left;
-	width:200px;
+  display: block;
+  vertical-align: top;
+  width: auto;
+  text-align:left;
+  width:240px;
+  white-space: nowrap;
 }
 .moon-clock-hour {
   display: inline-block;
@@ -12,13 +13,13 @@
   line-height:100px;
 }
 .moon-clock-right {
-	display: inline-block;
-	position:relative;
-  top:5px;
+  display: inline-block;
+  position: relative;
+  top: 5px;
 }
 .moon-clock-top {
   font-size: @moon-clock-minute-font-size;
-  color:@moon-clock-color;
+  color: @moon-clock-color;
   display: inline-block;
   white-space: nowrap;
   font-size: 61px;
@@ -28,25 +29,25 @@
 }
 .moon-clock-meridiem {
   .moon-bold-text;
-  color:@moon-clock-color;
+  color: @moon-clock-color;
   display: inline-block;
   text-transform: none;
   margin-left: 10px;
   font-size: @moon-clock-meridiem-font-size;
 }
 .moon-clock-bottom {
-  color:@moon-clock-color;
+  color: @moon-clock-color;
   text-transform: none;
   white-space: normal;
   vertical-align: top;
   display: inline-block;
-  height:28px;
+  height: 28px;
   width: 100%;
 }
 .moon-clock-divider {
   height: 2px;
   width: 100%;
-  margin:5px 0;
+  margin: 5px 0;
   background-color: @moon-clock-color;
 }
 .moon-clock-right.mini {
@@ -65,7 +66,7 @@
   text-align: right;
 }
 .moon-video-clock-container{
-  display:inline-block;
+  display: inline-block;
 }
 
 /* Localized custom widths */
